--- a/RepasoPhaser1/index.html
+++ b/RepasoPhaser1/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
 
     <script lang="javascript" src="js/phaser.min.js"> </script>
+    <script lang="javascript" src="js/jugador.js"> </script>
     <script lang="javascript" src="js/escenaPrincipal.js"> </script>
     <script lang="javascript" src="js/juego.js"> </script>
+
+
+
 
     <title>Title</title>
 </head>
