--- a/RepasoPhaser2/index.html
+++ b/RepasoPhaser2/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
     <head>
         <script lang="javascript" src="js/phaser.min.js"></script>
+        <script lang="javascript" src="js/mySprite.js"></script>
+
+        <script lang="javascript" src="js/mushroom.js"></script>
         <script lang="javascript" src="js/jugador.js"></script>
         <script lang="javascript" src="js/escenaPrincipal.js"></script>
         <script lang="javascript" src="js/juego.js"></script>
