--- a/RepasoPhaser2/index.html
+++ b/RepasoPhaser2/index.html
@@ -3,6 +3,7 @@
     <head>
         <script lang="javascript" src="js/phaser.min.js"></script>
         <script lang="javascript" src="js/engine.js"></script>
+        <script lang="javascript" src="js/destroy.js"></script>
         <script lang="javascript" src="js/mySprite.js"></script>
         <script lang="javascript" src="js/box.js"></script>
         <script lang="javascript" src="js/mushroom.js"></script>
